# one-core

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.toml  NOTICE  README.md  clippy.toml  config.yml  deny.toml  dev.env  intcert.pfx  mobile_config.yml  sonar-project.properties
apps/core-server/: Cargo.toml  build.rs
apps/core-server/src/: authentication.rs  config.rs  data_model.rs  deserialize.rs  did_config.rs  endpoints.rs  extractor.rs  init.rs  lib.rs  list_query.rs  main.rs  mapper.rs  metrics.rs  middleware.rs  openapi.rs  permissions.rs  router.rs  serialize.rs  session.rs  sts_token_validator.rs  test_utilities.rs
apps/core-server/tests/: integration_tests.rs
apps/migration/: Cargo.toml
apps/migration/src/: datatype.rs  lib.rs  m20230530_000001_create_credential_schema_table.rs  m20230530_000001_initial.rs  m20230619_094909_organisation_table.rs  m20230705_000002_revocation_none.rs  m20230707_000003_unique_schema_name.rs  m20230707_000004_add_credential.rs  m20230720_000005_unique_did_value.rs  m20230726_000006_proof_receiver.rs  m20230818_000002_get_rid_of_datatype_enum.rs  m20230821_000003_get_rid_of_enums.rs  m20230822_000004_proof_transport.rs  m20230907_000005_holder_did.rs  m20231003_000002_add_key_did_binding.rs  m20240110_000001_initial.rs  m20240115_093859_unique_did_name_and_key_name_in_org.rs  m20240116_110014_unique_did_in_organisation.rs  m20240116_153515_make_name_indexes_unique.rs  m20240118_070610_credential_add_role.rs  m20240123_124653_proof_state_enum_rename_offered_to_requested.rs  m20240129_112026_add_unique_index_on_credential_schema_name_organisation_deleted_at.rs  m20240129_115447_add_unique_index_on_proof_schema_name_organisation_deleted_at.rs  m20240130_105023_add_history.rs  m20240130_153529_add_pending_variant_to_history_action_enum_in_history_table.rs  m20240209_144950_add_verifier_key_id_to_proof.rs  m20240220_082229_add_lvvc_table.rs  m20240223_094129_validity_constraint_in_proof_schema.rs  m20240223_103849_add_backup_columns.rs  m20240229_134129_wallet_storage_type_credential_schema.rs  m20240305_081435_proof_input_schema.rs  m20240305_110029_suspend_credential_state.rs  m20240306_122440_add_backup_restored.rs  m20240306_124716_proof_input_claim_schema.rs  m20240307_071419_proof_input_claim_schema_required.rs  m20240307_093000_add_purpose_to_revocation_list.rs  m20240307_103000_add_reactivated_history_action.rs  m20240308_115228_add_metadata_to_history.rs  m20240314_101347_recreate_proof_input_schema_and_proof_input_claim_schema_tables.rs  m20240314_141907_remove_proof_schema_claim_schema_relation.rs  (+51 more)
apps/mock-server/: Cargo.toml  build.rs
apps/mock-server/src/: create_credential_schema.rs  create_proof_schema.rs  data_model.rs  delete_credential_schema.rs  delete_proof_schema.rs  endpoints.rs  get_credential_schema_details.rs  get_credential_schemas.rs  get_proof_schemas.rs  main.rs  test_utilities.rs
examples/: Cargo.toml  credential.rs  did-resolution.rs  signature.rs
lib/dcql/: Cargo.toml
lib/dcql/src/: builder.rs  display.rs  lib.rs  mapper.rs  matching.rs
lib/migration/: Cargo.toml
lib/migration/src/: batch_utils.rs  datatype.rs  deletion.rs  lib.rs  m20240110_000001_initial.rs  m20240115_093859_unique_did_name_and_key_name_in_org.rs  m20240116_110014_unique_did_in_organisation.rs  m20240116_153515_make_name_indexes_unique.rs  m20240118_070610_credential_add_role.rs  m20240123_124653_proof_state_enum_rename_offered_to_requested.rs  m20240129_112026_add_unique_index_on_credential_schema_name_organisation_deleted_at.rs  m20240129_115447_add_unique_index_on_proof_schema_name_organisation_deleted_at.rs  m20240130_105023_add_history.rs  m20240130_153529_add_pending_variant_to_history_action_enum_in_history_table.rs  m20240209_144950_add_verifier_key_id_to_proof.rs  m20240220_082229_add_lvvc_table.rs  m20240223_094129_validity_constraint_in_proof_schema.rs  m20240223_103849_add_backup_columns.rs  m20240229_134129_wallet_storage_type_credential_schema.rs  m20240305_081435_proof_input_schema.rs  m20240305_110029_suspend_credential_state.rs  m20240306_122440_add_backup_restored.rs  m20240306_124716_proof_input_claim_schema.rs  m20240307_071419_proof_input_claim_schema_required.rs  m20240307_093000_add_purpose_to_revocation_list.rs  m20240307_103000_add_reactivated_history_action.rs  m20240308_115228_add_metadata_to_history.rs  m20240314_101347_recreate_proof_input_schema_and_proof_input_claim_schema_tables.rs  m20240314_141907_remove_proof_schema_claim_schema_relation.rs  m20240319_105859_typed_credential_schema.rs  m20240321_154846_add_layout_type_and_layout_properties_to_credential_schema.rs  m20240424_124450_add_json_ld_context.rs  m20240514_070446_add_trust_model.rs  m20240522_081021_fix_trust_priority_type.rs  m20240522_093357_add_errored_variant_to_history_action_enum_in_history_table.rs  m20240523_093449_add_cascade_to_trust_entity_fk.rs  m20240528_090016_rename_lvvc_table_to_validity_credential.rs  m20240528_092240_add_type_field_to_validity_credential_table.rs  m20240528_093449_make_trust_columns_optional.rs  m20240528_120000_add_shared_imported_history_action.rs  (+185 more)
lib/migration/tests/: schema_tests.rs
lib/one-core/: Cargo.toml  build.rs  presentation_difinition.json
lib/one-core/src/: bitstring.rs  clock.rs  common_mapper.rs  common_validator.rs  data_model.rs  error.rs  handle_invitation.rs  holder_reject_proof_request.rs  holder_submit_proof.rs  issuer_connect.rs  lib.rs  local_did_helpers.rs  verifier_connect.rs  verifier_reject_proof_request.rs  verifier_submit.rs
lib/one-crypto/: Cargo.toml
lib/one-crypto/src/: encryption.rs  jwe.rs  lib.rs  password.rs  test.rs  utilities.rs
lib/one-dev-services/: Cargo.toml
lib/one-dev-services/src/: config.rs  lib.rs  model.rs
lib/proc-macros/: Cargo.toml
lib/proc-macros/src/: endpoint.rs  lib.rs  modify_schema.rs  modify_schema_autodetect.rs  options_not_nullable.rs  permission_check.rs
lib/shared-types/: Cargo.toml
lib/shared-types/src/: blob_id.rs  did_id.rs  (+43 more)
lib/sql-data-provider/: Cargo.toml
lib/standardized-types/: Cargo.toml
(+2026 files in other folders)
