[workspace.package]
authors = ["Procivis"]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace]
members = [
  "lib/one-core",
  "lib/one-crypto",
  "lib/one-dev-services",
  "lib/shared-types",
  "lib/sql-data-provider",

  "platforms/uniffi",
  "platforms/uniffi-bindgen",

  "apps/core-server",
  "apps/migration",

  "examples",
]
resolver = "2"

[workspace.dependencies]
anyhow             = { version = "1.0" }
async-trait        = { version = "0.1" }
autometrics        = { version = "2.0", features = ["prometheus-0_13"] }
axum               = { version = "0.8", features = ["macros"] }
ct-codecs          = { version = "1.1" }
futures            = { version = "0.3" }
hex                = { version = "0.4", features = ["serde"] }
indexmap           = { version = "2.6", features = ["serde"] }
mockall            = { version = "0.13" }
one-dto-mapper     = { version = "0.1" }
rand               = { version = "0.8" }
regex              = { version = "1.10" }
reqwest            = { version = "0.12", default-features = false, features = ["native-tls-vendored", "json"] }
sea-orm            = { version = "1.1", default-features = false }
secrecy            = { version = "0.10.3", features = ["serde"] }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
serde_qs           = { version = "0.13" }
serde_urlencoded   = { version = "0.7" }
serde_with         = { version = "3.8", features = ["json", "time_0_3"] }
shadow-rs          = { version = "0.38" }
shared-types       = { version = "0.1.0", path = "lib/shared-types", features = ["sea-orm"] }
strum              = { version = "0.26", features = ["derive"] }
tempfile           = { version = "3.10" }
thiserror          = { version = "2.0" }
time               = { version = "0.3", features = ["macros", "serde"] }
tokio              = { version = "1.38" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uniffi             = { version = "0.29" }
url                = { version = "2.5", features = ["serde"] }
urlencoding        = { version = "2.1" }
utoipa             = { version = "5.3", default-features = false, features = ["macros"] }
uuid               = { version = "1.11", features = ["v4", "serde"] }
validator          = { version = "0.19", features = ["derive"] }
wiremock           = { version = "0.6" }

[workspace.lints.clippy]
dbg_macro       = "deny"
print_stderr    = "deny"
redundant_clone = "warn"

[profile.mobile-release]
codegen-units = 1
inherits      = "release"
lto           = true
opt-level     = "s"
strip         = "symbols"
