[workspace.package]
authors      = ["Procivis"]
edition      = "2024"
license      = "Apache-2.0"
rust-version = "1.92.0"
version      = "0.1.0"

[workspace]
members = [
  "lib/dcql",
  "lib/migration",
  "lib/one-core",
  "lib/one-crypto",
  "lib/shared-types",
  "lib/standardized-types",
  "lib/sql-data-provider",

  "platforms/uniffi",
  "platforms/uniffi-bindgen",
  "platforms/uniffi-bindgen-ts-interface",

  "apps/core-server",
  "lib/proc-macros",
]
resolver = "2"

[workspace.dependencies]
anyhow                   = { version = "1.0" }
asn1-rs                  = { version = "0.7" }
async-trait              = { version = "0.1" }
autometrics              = { version = "3.0", features = ["prometheus-0_14"] }
axum                     = { version = "0.8", features = ["macros"] }
bon                      = { version = "3.6.4" }
bs58                     = { version = "0.5" }
clap                     = { version = "4.5", features = ["derive"] }
ct-codecs                = { version = "1.1" }
futures                  = { version = "0.3" }
hex                      = { version = "0.4", features = ["serde"] }
hex-literal              = { version = "1.0" }
indexmap                 = { version = "2.6", features = ["serde"] }
indoc                    = { version = "2.0" }
itertools                = { version = "0.14" }
maplit                   = { version = "1.0" }
mockall                  = { version = "0.14" }
multihash                = { version = "0.19" }
one-dto-mapper           = { version = "0.1.10" }
rand                     = { version = "0.8" }
rcgen                    = { version = "0.14", features = ["pem", "x509-parser"] }
regex                    = { version = "1.10" }
reqwest                  = { version = "0.13", default-features = false, features = ["rustls", "json", "http2"] }
rustls-platform-verifier = { version = "0.6" }
sea-orm                  = { version = "1.1", default-features = false }
secrecy                  = { version = "0.10.3", features = ["serde"] }
serde                    = { version = "1.0" }
serde_json               = { version = "1.0" }
serde_json_path          = { version = "0.7.2" }
serde_qs                 = { version = "0.15" }
serde_urlencoded         = { version = "0.7" }
serde_with               = { version = "3.8", features = ["json", "time_0_3"] }
shadow-rs                = { version = "1.5" }
shared-types             = { version = "0.1.0", path = "lib/shared-types", features = ["sea-orm"] }
similar-asserts          = { version = "1.7" }
standardized-types       = { version = "0.1.0", path = "lib/standardized-types" }
strum                    = { version = "0.27", features = ["derive"] }
tempfile                 = { version = "3.10" }
thiserror                = { version = "2.0" }
time                     = { version = "0.3", features = ["macros", "serde"] }
tokio                    = { version = "1.44" }
tracing                  = { version = "0.1" }
tracing-subscriber       = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ulid                     = { version = "1.2.0" }
uniffi                   = { version = "0.30" }
uniffi_bindgen           = { version = "0.30" }
url                      = { version = "2.5", features = ["serde"] }
urlencoding              = { version = "2.1" }
utoipa                   = { version = "5.3", default-features = false, features = ["macros"] }
uuid                     = { version = "1.11", features = ["v4", "serde"] }
validator                = { version = "0.20", features = ["derive"] }
wiremock                 = { version = "0.6" }
x509-parser              = { version = "0.18", features = ["verify"] }

[workspace.lints.rust]
let_underscore_drop = "warn"

[workspace.lints.clippy]
dbg_macro               = "deny"
expect_used             = "deny"
indexing_slicing        = "deny"
let_underscore_must_use = "warn"
panic                   = "deny"
print_stderr            = "deny"
redundant_clone         = "warn"
unwrap_used             = "deny"

[profile.mobile-release]
codegen-units = 1
inherits      = "release"
lto           = true
opt-level     = "s"
strip         = "symbols"
