[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "examples"
publish           = false
version           = "0.1.0"

[dev-dependencies]
hex-literal      = { workspace = true }
one-core         = { version = "0.1.0", path = "../lib/one-core" }
one-dev-services = { version = "0.1.0", path = "../lib/one-dev-services" }
reqwest          = { workspace = true }
shared-types     = { version = "0.1.0", path = "../lib/shared-types" }
time             = { version = "0.3" }
tokio            = { version = "1.38.1", features = ["full"] }
uuid             = { version = "1.10" }
secrecy          = { workspace = true }

[[example]]
name = "credential"
path = "credential.rs"

[[example]]
name = "did-resolution"
path = "did-resolution.rs"

[[example]]
name = "signature"
path = "signature.rs"
