[package]
name    = "core-server"
version = "0.1.0"
edition = "2021"
build   = "build.rs"
publish = false

# disable doctests
[lib]
doctest = false

[features]
# Treat build warnings as error
strict = []

[dependencies]
one-core                     = { version = "0.1.0", path = "../../lib/one-core", features = ["config_json", "config_yaml", "config_env"] }
sql-data-provider            = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["mysql"] }
shared-types                 = { version = "0.1.0", path = "../../lib/shared-types", features = ["utoipa"] }
axum.workspace               = true
ct-codecs.workspace          = true
dto_mapper.workspace         = true
reqwest.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
serde_qs.workspace           = true
serde_urlencoded.workspace   = true
shadow-rs.workspace          = true
thiserror.workspace          = true
time.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
url.workspace                = true
uuid.workspace               = true
validator.workspace          = true
tower-http                   = { version = "0.5", features = ["trace", "catch-panic"] }
headers                      = { version = "0.4" }
axum-extra                   = { version = "0.9", features = ["typed-header"] }
tokio                        = { workspace = true, features = ["macros", "rt-multi-thread"] }
utoipa                       = { workspace = true, features = ["uuid", "axum_extras", "url", "uuid"] }
utoipa-swagger-ui            = { version = "6.0", features = ["axum"] }
serde_with.workspace         = true
sentry                       = { version = "0.32", default-features = false, features = ["backtrace", "panic", "reqwest", "tracing"] }
prometheus                   = { version = "0.13", features = ["process"] }
clap                         = { version = "4.5", features = ["derive"] }

[build-dependencies]
shadow-rs.workspace  = true
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
codegen              = { version = "0.2" }

[dev-dependencies]
reqwest               = { version = "0.11", features = ["json"] }
wiremock.workspace    = true
sql-data-provider     = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["test_utils"] }
rand.workspace        = true
rand_chacha.workspace = true
indoc                 = { version = "2.0" }

[lints]
workspace = true
