[package]
build   = "build.rs"
edition = "2021"
name    = "core-server"
publish = false
version = "0.1.0"

# disable doctests
[lib]
doctest = false

[features]
# Treat build warnings as error
strict = []

[dependencies]
axum-extra                   = { version = "0.9", features = ["typed-header"] }
axum.workspace               = true
clap                         = { version = "4.5", features = ["derive"] }
ct-codecs.workspace          = true
dto_mapper.workspace         = true
headers                      = { version = "0.4" }
hex-literal                  = { version = "0.4" }
one-core                     = { version = "0.1.0", path = "../../lib/one-core", features = ["config_json", "config_yaml", "config_env"] }
one-crypto                   = { workspace = true }
one-providers                = { workspace = true }
prometheus                   = { version = "0.13", features = ["process"] }
reqwest.workspace            = true
sentry                       = { version = "0.34", default-features = false, features = ["backtrace", "panic", "reqwest", "tracing"] }
serde.workspace              = true
serde_json.workspace         = true
serde_qs.workspace           = true
serde_with.workspace         = true
shadow-rs.workspace          = true
shared-types                 = { version = "0.1.0", path = "../../lib/shared-types", features = ["utoipa"] }
sql-data-provider            = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["mysql"] }
thiserror.workspace          = true
time.workspace               = true
tokio                        = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http                   = { version = "0.5", features = ["trace", "catch-panic"] }
tracing-subscriber.workspace = true
tracing.workspace            = true
url.workspace                = true
utoipa                       = { workspace = true, features = ["uuid", "axum_extras", "url", "uuid"] }
utoipa-swagger-ui            = { version = "7.1", features = ["axum"] }
uuid.workspace               = true
validator.workspace          = true

[build-dependencies]
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shadow-rs.workspace  = true

[dev-dependencies]
indoc              = { version = "2.0" }
p256.workspace     = true
rand.workspace     = true
reqwest            = { version = "0.12", features = ["json"] }
sql-data-provider  = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["test_utils"] }
wiremock.workspace = true

[lints]
workspace = true
