[package]
authors           = ["Procivis"]
build             = "build.rs"
edition.workspace = true
license           = "Apache-2.0"
name              = "core-server"
publish           = false
version           = "0.1.0"

# disable doctests
[lib]
doctest = false

[features]
# Treat build warnings as error
strict = []

[dependencies]
axum.workspace = true
axum-extra = { version = "0.10", features = ["typed-header"] }
clap = { version = "4.5", features = ["derive"] }
ct-codecs.workspace = true
futures.workspace = true
headers = { version = "0.4" }
indexmap.workspace = true
indoc = { version = "2.0" }
one-core = { version = "0.1.0", path = "../../lib/one-core", features = ["config_json", "config_yaml", "config_env"] }
one-crypto = { version = "0.1.0", path = "../../lib/one-crypto" }
one-dto-mapper.workspace = true
prometheus = { version = "0.13", default-features = false, features = ["process"] }
reqwest.workspace = true
secrecy.workspace = true
sentry = { version = "0.34", default-features = false, features = ["backtrace", "panic", "reqwest", "tracing"] }
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
serde_with.workspace = true
shadow-rs.workspace = true
shared-types = { version = "0.1.0", path = "../../lib/shared-types", features = ["utoipa"] }
sql-data-provider = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["mysql"] }
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa = { workspace = true, features = [
    "uuid",
    "axum_extras",
    "url",
    "time",
    "yaml",
    "preserve_path_order",
    "indexmap",
] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipauto = { version = "0.2" }
uuid.workspace = true
validator.workspace = true
http-body-util = "0.1.2"

[build-dependencies]
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shadow-rs.workspace  = true

[dev-dependencies]
asn1-rs.workspace         = true
async-trait.workspace     = true
bs58.workspace            = true
hex-literal               = { version = "0.4" }
indoc                     = { version = "2.0" }
rand.workspace            = true
rcgen.workspace           = true
reqwest                   = { version = "0.12", features = ["json"] }
sea-orm.workspace         = true
secrecy.workspace         = true
serde_json_path.workspace = true
sql-data-provider         = { version = "0.1.0", path = "../../lib/sql-data-provider", features = ["test_utils"] }
ulid                      = { version = "1.2.0" }
wiremock.workspace        = true

[lints]
workspace = true
