[package]
name                   = "migration"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
publish                = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name              = "migration"
path              = "src/main.rs"
required-features = ["cli", "mysql"]

[dependencies]
sea-orm           = { workspace = true, features = ["with-time"] }
sea-orm-migration = { version = "0.12", default_features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
time.workspace    = true
tokio             = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["cli", "mysql"]
cli     = ["sea-orm-migration/cli", "tokio"]
mysql   = ["sea-orm-migration/sqlx-mysql"]

[lints]
workspace = true
