[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "migration"
publish           = false
version           = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name              = "migration"
path              = "src/main.rs"
required-features = ["cli", "mysql"]

[dependencies]
sea-orm           = { workspace = true, features = ["with-time"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
time.workspace    = true
tokio             = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }

[features]
cli     = ["sea-orm-migration/cli", "tokio"]
default = ["cli", "mysql"]
mysql   = ["sea-orm-migration/sqlx-mysql"]

[lints]
workspace = true
