[package]
description = "Digital Credentials Query Language (DCQL) implementation"
edition     = "2021"
license     = "Apache-2.0"
name        = "dcql"
publish     = false
version     = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json      = "1.0"
similar-asserts = "1.5"
