[package]
description = "Digital Credentials Query Language (DCQL) implementation"
edition     = "2024"
license     = "Apache-2.0"
name        = "dcql"
publish     = false
version     = "0.1.0"

[dependencies]
bon.workspace             = true
serde                     = { version = "1.0", features = ["derive"] }
similar-asserts.workspace = true
thiserror.workspace       = true

[dev-dependencies]
serde_json      = "1.0"
similar-asserts = "1.5"
