[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "migration"
publish           = false
version           = "0.1.0"

[dependencies]
sea-orm                = { workspace = true, features = ["with-time", "with-uuid"] }
sea-orm-migration      = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
shared-types.workspace = true
time.workspace         = true
tokio                  = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
urlencoding.workspace  = true
uuid                   = { version = "1.11.0", features = ["v4"] }

[features]
default = ["mysql"]
mysql   = ["sea-orm-migration/sqlx-mysql"]

[lints]
workspace = true
