[package]
authors           = ["Procivis"]
edition.workspace = true
license           = "Apache-2.0"
name              = "one-crypto"
publish           = false
version           = "0.1.0"

[lib]
doctest = false

[dependencies]
aes-gcm              = { version = "0.10.3", features = ["rand_core", "zeroize"] }
blstrs               = { version = "0.7" }
chacha20poly1305     = { version = "0.10" }
concat-kdf           = { version = "0.1" }
ct-codecs.workspace  = true
ed25519-compact      = { version = "2.1" }
hmac                 = { version = "0.12" }
mockall              = { workspace = true, optional = true }
p256                 = { version = "0.13", features = ["jwk", "ecdh"] }
pairing_crypto     = { version = "0.4.2", git = "https://github.com/procivis/pairing_crypto", rev = "6d9f5df" }
pbkdf2               = { version = "0.12", features = ["simple"] }
pqc_dilithium      = { version = "0.2.0", git = "https://github.com/procivis/dilithium", rev = "7fdfe6b" }
rand.workspace       = true
rand_chacha          = { version = "0.3" }
serde.workspace      = true
serde_json.workspace = true
sha2                 = { version = "0.10" }
thiserror.workspace  = true
zeroize              = { workspace = true, features = ["serde"] }

[dev-dependencies]
mockall = { workspace = true }

[features]
mock = ["mockall"]

[lints]
workspace = true
